--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,13 @@ body {
   color: #4d4d4d;
 }
 
-/* unsplash magnifying glass */
 .form-div{
   height: 50px;
   padding:0;
 }
 #search-glass {  
   border: none;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
+  border-radius: 5px;
   height: 50px;
   background: #fff;
 }
@@ -43,10 +39,6 @@ body {
   cursor: pointer;
 }
 #search-box {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
   border: none;
   font-size: 15px;
   height: 50px;
@@ -61,23 +53,57 @@ button:hover {
 }
 .container{
  margin-top: 20px;
- /* border: 1px #4d4d4d solid; */
  width: 100%;
  margin: 30px auto;
 }
-.photo-grid{
-  display: grid;
-  justify-items:center;
-  grid-gap: 20px 20px;
-  grid-template-rows: 160px;
+.photo-entry{
+  position:relative;
+  margin-bottom: 10px;
+}
+.photo{
+  border-radius: 7px;
+}
+.photo:hover{
+  cursor:pointer;
+}
+.user{
+  position:absolute;
+  border-radius: 50%;
+  bottom: 9px;
+  left: 39%;
+}
+.profile-photo{
+  border-radius:50%;
+  border: 2px #fff solid;
+  display:inline-block;
+  vertical-align:middle;
+}
+.username{
+  color: #fff;
+  display:inline-block;
+  vertical-align:middle;
+  margin-left: 5px;
+  font-weight: bold;
+}
+.heart{
+  height:1%;
+  width:1%;
+  fill:red;
+}
+.likes{
+  position:absolute;
+  top: 5px;
+  left: 18%;
+  color:#fff;
+  font-weight: bold;
+  border-radius:5px;
 }
 
-.photo{
-    /* align-items: center; */
-  grid-column: span 1;
-  grid-row: span 2;
-  border-radius: 5px;
+@media only screen and (max-width: 1280px){
+  .likes{
+    left: 25%;
+  }
+  .user{
+    left: 35%;
+  }
 }
- .photo:hover{
-   cursor:pointer;
- }
